--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
   font-size: 20px;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 header {
   display: flex;
   height: 50px;
@@ -44,4 +48,15 @@ figure {
 
 figure img {
   width: 300px;
+}
+
+#price div {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+table, tr, th, td {
+  border: 1px solid black;
 }
